# dsii_dwarfs

./: .gitignore  .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  requirements.txt  setup.cfg
docs/: conf.py  index.rst
docs/dsii_dwarfs/: index.rst
dsii_dwarfs/: Do_stamps1.py  Do_stamps2.py  Do_stamps3.py  Dogrid.py  __init__.py  axial_ratio_picker.py  distance_picker.py  download_hsc_psf.py  dwarf_sersic_2D.py  fit_psf.py  hsc_patch.py  inspect_galaxies.py  isochrone_picker.py  make_galaxies.py  make_galaxies_grid.py  noise_picker.py  psf_picker.py  schechter_picker.py  simulate_dwarf_elliptical.py  simulate_psf_fit_dwarf_elliptical.py  size_picker.py
dsii_dwarfs/data/: MIST_v1.2_vvcrit0.0_WFIRST_link.txt  MIST_v1.2_vvcrit0.4_WFIRST_link.txt  MIST_v1.2_vvcrit0.4_link.txt  README.rst  hsc_pdr2_dud_image_8_sets.txt  hsc_pdr2_dud_image_single_set.txt  mnras0414-3699-SD1.txt  sanchez-janssen_fig9.txt  subaru_seeing.txt
dsii_dwarfs/legacy/: Do_stamps1.py  axial_ratio_picker.py  distance_picker.py  inspect_galaxies.py  isochrone_picker.py  make_galaxies.py  make_galaxies_grid.py  size_picker.py  version.py
dsii_dwarfs/notebooks/: Axial Ratios.ipynb  Distance_picker.ipynb  DwarfSersic2D.ipynb  FIT_HSC_PSFs.ipynb  HSC_dwarf_simulation.ipynb  HSC_fake_psf_picker.ipynb  HyperSuprimeCam data.ipynb  Isochrone_picker.ipynb  Noise.ipynb  Oversampled_Moffat_PSF.ipynb  Schechter_picker.ipynb  Semi-resolved dwarf galaxy simulation.ipynb  Size_distribution.ipynb  dE_grid.ipynb  place_dwarf_in_hsc.ipynb
dsii_dwarfs/tests/: test_simulation.py
licenses/: LICENSE.rst
(+19 files in other folders)
