[metadata]
name = dsii_dwarfs
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.2.0.dev
author = Henry C. Ferguson, Craig Jones, Erik Tollerud, Robel Geda
author_email = ferguson@stsci.edu
description = Test the efficacy of convolutional neural networks (CNN) in identifying diffuse dwarfs.
long_description = 
license = BSD 3-Clause
url = https://github.com/robelgeda/dsii-dwarfs.git
edit_on_github = False
github_project = robelgeda/dsii-dwarfs
python_requires = ">=3.6"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy
zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts =
    
    # astropy-package-template-example = packagename.example_mod:main
    

[options.package_data]
* = *.c
dsii_dwarfs = data/*
dsii_dwarfs.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
